--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,33 @@
     {% include header.html %}
 
 
+    
+    <!-- Banner -->
+    <section id="banner" class="major">
+        <div class="inner">
+            <header class="major">
+                <h1>{{ page.landing-title }}</h1>
+            </header>
+            <div class="content">
+                <p style="text-transform: uppercase;">{{ site.description }}</p>
+                <ul class="actions">
+                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
+                </ul>
+            </div>
+            <section id="two">
+                <div class="inner">
+                    <header class="major">
+                        <h2>Massa libero</h2>
+                    </header>
+                    <p>{{ content }}</p>
+                    <ul class="actions">
+                        <li><a href="landing.html" class="button next">Get Started</a></li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+    </section>
+
     <!-- Main -->
     <div id="main">
 
@@ -34,22 +61,6 @@
 
     </div>
 
-
-    
-    <!-- Banner -->
-    <section id="banner" class="major">
-        <div class="inner">
-            <header class="major">
-                <h1>{{ page.landing-title }}</h1>
-            </header>
-            <div class="content">
-                <p style="text-transform: uppercase;">{{ site.description }}</p>
-                <ul class="actions">
-                    <li><a href="#one" class="button next scrolly">Get Started</a></li>
-                </ul>
-            </div>
-        </div>
-    </section>
     {% include footer.html %}
 
 </body>
