--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <h1>{{ page.landing-title }}</h1><p><span class="image right"><img src="{% link assets/images/pic10.jpg %}" alt="" />
+                <span class="image fit"><img src="{% link assets/images/pic03.jpg %}" alt="" /></span>
             </header>
             <section id="two">
                 <div class="inner">
