--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,9 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                <span class="image fit"><img src="{% link assets/images/pic03.jpg %}" alt="" /></span>
+                <div class="row 50% uniform">
+                    <div class="4u"><span class="image fit"><img src="{% link assets/images/pic08.jpg %}" alt="" /></span></div>
+                </div>
             </header>
             <section id="two">
                 <div class="inner">
