revert home.html to pre-image version

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,7 +18,7 @@
     <section id="banner" class="major">
         <div class="inner">
             <header class="major">
-                    <div class="4u"><span class="image fit"><img src="{% link assets/images/pic08.jpg %}" alt="" /></span></div>
+                <h1>{{ page.landing-title }}</h1>
             </header>
             <section id="two">
                 <div class="inner">
